# aspen

./: .gitignore  README.md  trunk.dockerfile  twig.dockerfile
.github/workflows/: publish.yaml  trunk.yaml  twig.yaml
catkin/: .gitignore  readme.md
catkin/Images.xcassets/aspen-white.imageset/: Contents.json
catkin/catkin/: AspenAuthority.swift  AspenTrunk.swift  ContentView.swift  HomeView.swift  Info.plist  LinkBuilderView.swift  LoginView.swift  MainView.swift  SettingsView.swift  catkinApp.swift
catkin/catkin.xcodeproj/: project.pbxproj
catkin/catkin.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
catkin/clients/: AuthClient.swift  LinksClient.swift
catkin/scripts/: protoc.sh
foliage/: .gitignore  assets  index.html  lonnie.tsx  package.json  pnpm-lock.yaml  protoc.sh  tsconfig.json  vite.config.ts
foliage/src/: main.tsx  useAuth.ts
foliage/src/pages/console/: ConsolePage.tsx
foliage/src/pages/howitworks/: HowItWorks.tsx
foliage/src/pages/landing/: Hero.tsx  LandingPage.tsx
foliage/src/pages/links/: EditLinkModal.tsx  LinkDetail.tsx  ManageLinksPage.tsx  NewLinkModal.tsx
foliage/src/pages/login/: LoginPage.tsx
foliage/src/pages/manage/links/: ManageLinksPage.tsx
foliage/src/pages/register/: RegisterPage.tsx
foliage/src/shared/: NavBar.tsx  SideBar.tsx  TopBar.tsx  auth.ts  getAuthority.ts  links.ts  user.ts
foliage/src/shared/clients/: auth.ts  links.ts
foliage/src/shared/helpers/: storage.ts  zustand.ts
foliage/src/shared/links/: LinkDetail.tsx
protos/: aspen.proto  trunk.proto
trunk/: Cargo.toml  build.rs  rustfmt.toml
trunk/src/: db.rs  helpers.rs  jwt.rs  macros.rs  main.rs
trunk/src/services/: authorization.rs  links.rs
twig/: .gitignore  Cargo.toml  README.md  main.py  pyproject.toml
twig/src/: main.rs
