[package]
name = "trunk"
version = "0.1.0"
authors = ["Tyler Holewinski <erwijet@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_once = "0.2.6"
futures = "0.3.26"
hmac = "0.12.1"
jwt = "0.16.0"
lazy_static = "1.4.0"
mongodb = "2.4.0"
prost = "0.11.8"
serde = { version = "1.0.152", features = ["derive"] }
sha2 = "0.10.6"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.8.3"
tonic-web = "0.4.0"
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace", "cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[build-dependencies]
tonic-build = "0.8.4"
